<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiver Caddy</string>
    <string name="action_settings">Settings</string>
    <string name="game">Game</string>
    <string name="end">End</string>
    <string name="arrow">Arrow</string>
    <string name="go">Go</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="game_number">3</string>
    <string name="end_number">4</string>
    <string name="arrow_number">5</string>

</resources>
